--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <h1>Palindrome checker</h1>
         <div class="searchbox">
             <label for="searchbar">Please type in the word you want to check: </label>
-            <input type="text" id="searchbar" placeholder="Enter your word here..." required>
-            <button type="button">Check</button>
+            <input type="text" id="searchbar" placeholder="Enter here..." autocomplete="off" required>
+            <button id="button" type="button">Check</button>
         </div>
-        <div class="result hidden"></div>
+        <div id="result" class="hidden"></div>
     </main>
     <script src="./js/index.js"></script>
 </body>
