--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         </div>
         <div id="result" class="hidden"></div>
     </main>
-    <script src="./js/index.js"></script>
+    <script src="./js/alternative.js"></script>
 </body>
 </html>
